--- a/package.json
+++ b/package.json
@@ -59,21 +59,28 @@
     "sharp": "^0.33.1",
     "dotenv": "^16.3.1",
     "chalk": "^4.1.2",
-    "moment": "^2.29.4",
     "axios": "^1.6.2",
     "form-data": "^4.0.0",
     "node-fetch": "^3.3.2",
     "uuid": "^9.0.1",
     "jimp": "^0.22.10",
-    "fluent-ffmpeg": "^2.1.2"
+    "fluent-ffmpeg": "^2.1.2",
+    "joi": "^17.11.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "typescript": "^5.3.3",
     "jest": "^29.7.0",
+    "@types/jest": "^29.5.8",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "prettier": "^3.1.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3",
+    "nyc": "^15.1.0"
   },
   "files": [
     "lib/",
