--- a/package.json
+++ b/package.json
@@ -37,15 +37,16 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "puppeteer": "^21.6.1",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "ws": "^8.14.2",
     "fs-extra": "^11.2.0",
     "crypto-js": "^4.2.0",
     "mime-types": "^2.1.35",
-    "sharp": "^0.33.1",
     "dotenv": "^16.3.1",
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "axios": "^1.6.2",
+    "node-fetch": "^3.3.2",
+    "form-data": "^4.0.0"
   }
 }
