--- a/package.json
+++ b/package.json
@@ -37,16 +37,14 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "ws": "^8.14.2",
+    "@whiskeysockets/libsignal": "^0.0.1",
+    "protobufjs": "^7.2.5",
+    "pino": "^8.17.2",
     "fs-extra": "^11.2.0",
     "crypto-js": "^4.2.0",
     "mime-types": "^2.1.35",
-    "dotenv": "^16.3.1",
-    "chalk": "^4.1.2",
-    "axios": "^1.6.2",
-    "node-fetch": "^3.3.2",
-    "form-data": "^4.0.0"
+    "dotenv": "^16.3.1"
   }
 }
