--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "qrcode-terminal": "^0.12.0",
     "ws": "^8.14.2",
-    "@whiskeysockets/libsignal": "^0.0.1",
+    "libsignal-protocol-javascript": "^2.3.2",
     "protobufjs": "^7.2.5",
     "pino": "^8.17.2",
     "fs-extra": "^11.2.0",
