--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "qrcode-terminal": "^0.12.0",
+    "qrcode": "^1.5.3",
     "ws": "^8.14.2",
     "protobufjs": "^7.2.5",
     "pino": "^8.17.2",
