--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "crypto-js": "^4.2.0",
     "mime-types": "^2.1.35",
     "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "pino-pretty": "^10.3.1"
   }
 }
