--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "dependencies": {
     "events": "^3.3.0",
     "ws": "^8.14.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "protobufjs": "^7.2.5",
     "qrcode-terminal": "^0.12.0",
     "qrcode": "^1.5.3",
@@ -66,96 +66,17 @@
     "fs-extra": "^11.1.1",
     "mime-types": "^2.1.35",
     "crypto-js": "^4.2.0",
-    "sharp": "^0.32.6",
     "axios": "^1.6.2",
-    "node-webpmux": "^3.1.0",
     "libphonenumber-js": "^1.10.51",
-    "country-list": "^2.3.0",
-    "whatsapp-web.js": "^1.23.0",
-    "baileys": "^6.6.0",
-    "@whiskeysockets/baileys": "^6.6.0",
     "qr-image": "^3.2.0",
     "node-cache": "^5.1.2",
-    "ioredis": "^5.3.2",
-    "bull": "^4.12.2",
-    "agenda": "^5.0.0",
-    "cron": "^3.1.6",
-    "node-schedule": "^2.1.1",
-    "compression": "^1.7.4",
-    "multer": "^1.4.5-lts.1",
-    "formidable": "^3.5.1",
-    "busboy": "^1.6.0",
-    "stream-buffers": "^3.0.2",
-    "readable-stream": "^4.4.2",
-    "through2": "^4.0.2",
-    "pump": "^3.0.0",
-    "end-of-stream": "^1.4.4",
-    "duplexify": "^4.1.2",
-    "stream-shift": "^1.0.1",
-    "once": "^1.4.0",
-    "inherits": "^2.0.4",
-    "util-deprecate": "^1.0.2",
-    "safe-buffer": "^5.2.1",
-    "string_decoder": "^1.3.0",
-    "isarray": "^2.0.5",
-    "process-nextick-args": "^2.0.1",
-    "core-util-is": "^1.0.3",
-    "buffer": "^6.0.3",
-    "events": "^3.3.0",
-    "stream": "^0.0.2",
-    "util": "^0.12.5",
-    "path": "^0.12.7",
-    "os": "^0.1.2",
-    "crypto": "^1.0.1",
-    "zlib": "^1.0.5",
-    "querystring": "^0.2.1",
-    "url": "^0.11.3",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0",
-    "net": "^1.0.2",
-    "tls": "^0.0.1",
-    "dgram": "^1.0.1",
-    "dns": "^0.2.2",
-    "domain": "^0.0.1",
-    "cluster": "^0.7.7",
-    "child_process": "^1.0.2",
-    "worker_threads": "^1.0.0",
-    "async_hooks": "^1.0.0",
-    "perf_hooks": "^1.0.0",
-    "inspector": "^1.0.0",
-    "v8": "^1.0.0",
-    "vm": "^1.0.0",
-    "repl": "^1.0.0",
-    "readline": "^1.3.0",
-    "tty": "^1.0.1",
-    "assert": "^2.1.0",
-    "console": "^1.0.0",
-    "timers": "^0.1.1",
-    "module": "^1.2.5",
-    "punycode": "^2.3.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "rate-limiter-flexible": "^3.0.8",
+    "puppeteer": "^21.6.1",
     "joi": "^17.11.0",
     "dotenv": "^16.3.1",
     "uuid": "^9.0.1",
     "moment": "^2.29.4",
     "lodash": "^4.17.21",
-    "chalk": "^4.1.2",
-    "ora": "^5.4.1",
-    "inquirer": "^8.2.6",
-    "commander": "^11.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "node-cron": "^3.0.3",
-    "socket.io": "^4.7.4",
-    "redis": "^4.6.10",
-    "mongodb": "^6.3.0",
-    "mysql2": "^3.6.5",
-    "sqlite3": "^5.1.6",
-    "sequelize": "^6.35.1",
-    "mongoose": "^8.0.3"
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
