Fix ChatPulse with Advanced Connection Methods

--- a/package.json
+++ b/package.json
@@ -71,14 +71,13 @@
     "qr-image": "^3.2.0",
     "node-cache": "^5.1.2",
     "puppeteer": "^21.6.1",
-    "joi": "^17.11.0",
     "dotenv": "^16.3.1",
     "uuid": "^9.0.1",
-    "moment": "^2.29.4",
-    "lodash": "^4.17.21",
-    "node-cron": "^3.0.3"
+    "sharp": "^0.33.0",
+    "jsqr": "^1.4.0"
   },
   "devDependencies": {
+    "pino-pretty": "^10.2.3",
     "nodemon": "^3.0.1",
     "eslint": "^8.55.0",
     "eslint-config-standard": "^17.1.0",
