--- a/package.json
+++ b/package.json
@@ -55,44 +55,46 @@
     "url": "https://github.com/DarkSide-Developers/ChatPulse/issues"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
     "events": "^3.3.0",
-    "ws": "^8.14.2",
+    "fs-extra": "^11.1.1",
+    "jsqr": "^1.4.0",
+    "libphonenumber-js": "^1.10.51",
+    "mime-types": "^2.1.35",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
-    "protobufjs": "^7.2.5",
-    "qrcode-terminal": "^0.12.0",
-    "qrcode": "^1.5.3",
     "pino": "^8.16.1",
     "pino-pretty": "^10.2.3",
-    "fs-extra": "^11.1.1",
-    "mime-types": "^2.1.35",
-    "crypto-js": "^4.2.0",
-    "axios": "^1.6.2",
-    "libphonenumber-js": "^1.10.51",
-    "qr-image": "^3.2.0",
-    "node-cache": "^5.1.2",
+    "protobufjs": "^7.2.5",
     "puppeteer": "^21.6.1",
-    "dotenv": "^16.3.1",
-    "uuid": "^9.0.1",
+    "qr-image": "^3.2.0",
+    "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
     "sharp": "^0.33.0",
-    "jsqr": "^1.4.0"
+    "uuid": "^9.0.1",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "pino-pretty": "^10.2.3",
-    "nodemon": "^3.0.1",
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-security": "^3.0.1",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
     "jsdoc": "^4.0.2",
+    "nodemon": "^3.0.1",
+    "pino-pretty": "^10.2.3",
     "rimraf": "^5.0.5",
-    "@types/node": "^20.10.4",
-    "typescript": "^5.3.3",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=16.0.0",
@@ -320,10 +322,44 @@
     },
     "media": {
       "formats": {
-        "image": ["jpg", "jpeg", "png", "gif", "webp", "bmp", "tiff"],
-        "video": ["mp4", "avi", "mov", "mkv", "webm", "3gp", "flv"],
-        "audio": ["mp3", "wav", "ogg", "aac", "m4a", "flac", "wma"],
-        "document": ["pdf", "doc", "docx", "xls", "xlsx", "ppt", "pptx", "txt", "rtf"]
+        "image": [
+          "jpg",
+          "jpeg",
+          "png",
+          "gif",
+          "webp",
+          "bmp",
+          "tiff"
+        ],
+        "video": [
+          "mp4",
+          "avi",
+          "mov",
+          "mkv",
+          "webm",
+          "3gp",
+          "flv"
+        ],
+        "audio": [
+          "mp3",
+          "wav",
+          "ogg",
+          "aac",
+          "m4a",
+          "flac",
+          "wma"
+        ],
+        "document": [
+          "pdf",
+          "doc",
+          "docx",
+          "xls",
+          "xlsx",
+          "ppt",
+          "pptx",
+          "txt",
+          "rtf"
+        ]
       },
       "limits": {
         "maxFileSize": "64MB",
@@ -426,10 +462,32 @@
       ]
     },
     "api": {
-      "versions": ["v1", "v2", "v3"],
-      "protocols": ["REST", "GraphQL", "WebSocket", "gRPC"],
-      "formats": ["JSON", "XML", "YAML", "CSV", "Protobuf"],
-      "authentication": ["Bearer", "Basic", "Digest", "OAuth", "JWT", "API-Key"],
+      "versions": [
+        "v1",
+        "v2",
+        "v3"
+      ],
+      "protocols": [
+        "REST",
+        "GraphQL",
+        "WebSocket",
+        "gRPC"
+      ],
+      "formats": [
+        "JSON",
+        "XML",
+        "YAML",
+        "CSV",
+        "Protobuf"
+      ],
+      "authentication": [
+        "Bearer",
+        "Basic",
+        "Digest",
+        "OAuth",
+        "JWT",
+        "API-Key"
+      ],
       "rateLimit": {
         "requests": 1000,
         "window": "1h",
@@ -438,25 +496,106 @@
       "pagination": {
         "default": 20,
         "max": 100,
-        "methods": ["offset", "cursor", "page"]
+        "methods": [
+          "offset",
+          "cursor",
+          "page"
+        ]
       },
       "filtering": {
-        "operators": ["eq", "ne", "gt", "gte", "lt", "lte", "in", "nin", "like", "regex"],
-        "fields": ["id", "timestamp", "type", "status", "from", "to", "body"]
+        "operators": [
+          "eq",
+          "ne",
+          "gt",
+          "gte",
+          "lt",
+          "lte",
+          "in",
+          "nin",
+          "like",
+          "regex"
+        ],
+        "fields": [
+          "id",
+          "timestamp",
+          "type",
+          "status",
+          "from",
+          "to",
+          "body"
+        ]
       },
       "sorting": {
-        "fields": ["id", "timestamp", "type", "status"],
-        "orders": ["asc", "desc"]
+        "fields": [
+          "id",
+          "timestamp",
+          "type",
+          "status"
+        ],
+        "orders": [
+          "asc",
+          "desc"
+        ]
       }
     },
     "deployment": {
-      "environments": ["development", "staging", "production"],
-      "platforms": ["docker", "kubernetes", "aws", "gcp", "azure", "heroku", "vercel", "netlify"],
-      "databases": ["mongodb", "mysql", "postgresql", "redis", "sqlite", "dynamodb", "firestore"],
-      "monitoring": ["prometheus", "grafana", "datadog", "newrelic", "sentry", "bugsnag"],
-      "logging": ["winston", "pino", "bunyan", "log4js", "elasticsearch", "splunk"],
-      "testing": ["jest", "mocha", "chai", "supertest", "cypress", "playwright", "puppeteer"],
-      "ci-cd": ["github-actions", "gitlab-ci", "jenkins", "travis", "circleci", "azure-devops"]
+      "environments": [
+        "development",
+        "staging",
+        "production"
+      ],
+      "platforms": [
+        "docker",
+        "kubernetes",
+        "aws",
+        "gcp",
+        "azure",
+        "heroku",
+        "vercel",
+        "netlify"
+      ],
+      "databases": [
+        "mongodb",
+        "mysql",
+        "postgresql",
+        "redis",
+        "sqlite",
+        "dynamodb",
+        "firestore"
+      ],
+      "monitoring": [
+        "prometheus",
+        "grafana",
+        "datadog",
+        "newrelic",
+        "sentry",
+        "bugsnag"
+      ],
+      "logging": [
+        "winston",
+        "pino",
+        "bunyan",
+        "log4js",
+        "elasticsearch",
+        "splunk"
+      ],
+      "testing": [
+        "jest",
+        "mocha",
+        "chai",
+        "supertest",
+        "cypress",
+        "playwright",
+        "puppeteer"
+      ],
+      "ci-cd": [
+        "github-actions",
+        "gitlab-ci",
+        "jenkins",
+        "travis",
+        "circleci",
+        "azure-devops"
+      ]
     }
   }
 }
