Remove Unnecessary Code and Strengthen Codebase

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatpulse",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "ChatPulse - Advanced WhatsApp Web API Library",
   "main": "src/index.js",
   "scripts": {
@@ -8,41 +8,18 @@
     "basic": "node examples/basic-example.js",
     "advanced": "node examples/advanced-example.js",
     "test": "node examples/test-connection.js",
-    "dev": "node examples/advanced-example.js",
-    "pairing": "node examples/pairing-example.js",
-    "build": "npm run lint && npm run test:unit",
     "lint": "eslint src/ examples/ --ext .js",
-    "lint:fix": "eslint src/ examples/ --ext .js --fix",
-    "test:unit": "jest --coverage",
-    "test:integration": "jest --testPathPattern=integration",
-    "test:e2e": "jest --testPathPattern=e2e",
-    "docs": "jsdoc -c jsdoc.conf.json",
-    "clean": "rimraf node_modules package-lock.json",
-    "reinstall": "npm run clean && npm install",
-    "security": "npm audit && npm audit fix",
-    "update": "npm update && npm audit fix"
+    "lint:fix": "eslint src/ examples/ --ext .js --fix"
   },
   "keywords": [
     "whatsapp",
     "whatsapp-web",
     "whatsapp-api",
     "whatsapp-bot",
-    "whatsapp-automation",
-    "chatbot",
-    "bot-framework",
     "messaging",
     "automation",
     "qr-code",
-    "pairing-code",
-    "multi-device",
-    "end-to-end-encryption",
-    "media-sharing",
-    "group-management",
-    "business-api",
-    "webhook",
-    "real-time",
-    "cross-platform",
-    "typescript-support"
+    "pairing-code"
   ],
   "author": "DarkWinzo <isurulakshan9998@gmail.com>",
   "license": "MIT",
@@ -50,546 +27,20 @@
     "type": "git",
     "url": "https://github.com/DarkSide-Developers/ChatPulse.git"
   },
-  "homepage": "https://github.com/DarkSide-Developers/ChatPulse",
-  "bugs": {
-    "url": "https://github.com/DarkSide-Developers/ChatPulse/issues"
-  },
   "dependencies": {
-    "events": "^3.3.0",
-    "fs-extra": "^11.1.1",
-    "jsqr": "^1.4.0",
-    "libphonenumber-js": "^1.10.51",
-    "mime-types": "^2.1.35",
-    "node-fetch": "^2.7.0",
-    "pino": "^8.16.1",
-    "pino-pretty": "^10.2.3",
-    "protobufjs": "^7.2.5",
+    "ws": "^8.14.2",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
-    "sharp": "^0.33.0",
-    "uuid": "^9.0.1",
-    "ws": "^8.14.2"
+    "pino": "^8.16.1",
+    "fs-extra": "^11.1.1",
+    "libphonenumber-js": "^1.10.51",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-security": "^3.0.1",
-    "jest": "^29.7.0",
-    "jsdoc": "^4.0.2",
-    "nodemon": "^3.0.1",
-    "pino-pretty": "^10.2.3",
-    "rimraf": "^5.0.5",
-    "supertest": "^6.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.3"
+    "pino-pretty": "^10.2.3"
   },
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
-  },
-  "os": [
-    "linux",
-    "darwin",
-    "win32"
-  ],
-  "cpu": [
-    "x64",
-    "arm64"
-  ],
-  "preferGlobal": false,
-  "private": false,
-  "config": {
-    "port": 3000,
-    "logLevel": "info",
-    "sessionTimeout": 300000,
-    "maxConnections": 100,
-    "rateLimitWindow": 60000,
-    "rateLimitMax": 100
-  },
-  "funding": {
-    "type": "github",
-    "url": "https://github.com/sponsors/DarkWinzo"
-  },
-  "contributors": [
-    {
-      "name": "DarkWinzo",
-      "email": "isurulakshan9998@gmail.com",
-      "url": "https://github.com/DarkWinzo"
-    }
-  ],
-  "maintainers": [
-    {
-      "name": "DarkWinzo",
-      "email": "isurulakshan9998@gmail.com",
-      "url": "https://github.com/DarkWinzo"
-    }
-  ],
-  "files": [
-    "src/",
-    "lib/",
-    "examples/",
-    "docs/",
-    "README.md",
-    "LICENSE",
-    "CHANGELOG.md"
-  ],
-  "directories": {
-    "lib": "./src",
-    "doc": "./docs",
-    "example": "./examples",
-    "test": "./tests"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "chatpulse": {
-    "features": {
-      "qrAuthentication": true,
-      "pairingAuthentication": true,
-      "multiDevice": true,
-      "endToEndEncryption": true,
-      "mediaSupport": true,
-      "groupManagement": true,
-      "businessAPI": true,
-      "webhooks": true,
-      "realTimeMessaging": true,
-      "rateLimiting": true,
-      "sessionManagement": true,
-      "errorRecovery": true,
-      "logging": true,
-      "validation": true,
-      "messageQueue": true,
-      "fileUpload": true,
-      "voiceMessages": true,
-      "stickers": true,
-      "polls": true,
-      "buttons": true,
-      "lists": true,
-      "contacts": true,
-      "location": true,
-      "reactions": true,
-      "forwarding": true,
-      "editing": true,
-      "deletion": true,
-      "archiving": true,
-      "pinning": true,
-      "muting": true,
-      "blocking": true,
-      "presence": true,
-      "typing": true,
-      "recording": true,
-      "readReceipts": true,
-      "messageHistory": true,
-      "backup": true,
-      "restore": true,
-      "export": true,
-      "import": true,
-      "analytics": true,
-      "monitoring": true,
-      "clustering": true,
-      "loadBalancing": true,
-      "caching": true,
-      "database": true,
-      "api": true,
-      "cli": true,
-      "gui": true,
-      "mobile": true,
-      "desktop": true,
-      "web": true,
-      "cloud": true,
-      "onPremise": true,
-      "docker": true,
-      "kubernetes": true,
-      "serverless": true,
-      "microservices": true,
-      "eventDriven": true,
-      "reactive": true,
-      "async": true,
-      "streaming": true,
-      "batch": true,
-      "scheduled": true,
-      "triggered": true,
-      "conditional": true,
-      "templated": true,
-      "personalized": true,
-      "localized": true,
-      "accessible": true,
-      "secure": true,
-      "compliant": true,
-      "auditable": true,
-      "testable": true,
-      "maintainable": true,
-      "scalable": true,
-      "performant": true,
-      "reliable": true,
-      "available": true,
-      "durable": true,
-      "consistent": true,
-      "eventual": true,
-      "strong": true,
-      "weak": true,
-      "causal": true,
-      "monotonic": true,
-      "sequential": true,
-      "linearizable": true,
-      "serializable": true,
-      "snapshot": true,
-      "readCommitted": true,
-      "repeatableRead": true,
-      "phantom": true,
-      "dirty": true,
-      "lost": true,
-      "nonRepeatable": true,
-      "writeSkew": true,
-      "readSkew": true,
-      "phantomRead": true,
-      "dirtyRead": true,
-      "lostUpdate": true,
-      "nonRepeatableRead": true
-    },
-    "authentication": {
-      "methods": [
-        "qr",
-        "pairing",
-        "session",
-        "token",
-        "oauth",
-        "jwt",
-        "api-key",
-        "webhook"
-      ],
-      "security": {
-        "encryption": "AES-256",
-        "hashing": "SHA-256",
-        "signing": "HMAC-SHA256",
-        "keyExchange": "ECDH",
-        "keyDerivation": "PBKDF2",
-        "randomGeneration": "CSPRNG"
-      }
-    },
-    "messaging": {
-      "types": [
-        "text",
-        "image",
-        "video",
-        "audio",
-        "document",
-        "sticker",
-        "location",
-        "contact",
-        "poll",
-        "button",
-        "list",
-        "template",
-        "carousel",
-        "interactive"
-      ],
-      "features": [
-        "reactions",
-        "replies",
-        "forwards",
-        "edits",
-        "deletions",
-        "mentions",
-        "hashtags",
-        "links",
-        "previews",
-        "thumbnails",
-        "captions",
-        "metadata",
-        "timestamps",
-        "status",
-        "delivery",
-        "read",
-        "typing",
-        "recording",
-        "presence"
-      ]
-    },
-    "media": {
-      "formats": {
-        "image": [
-          "jpg",
-          "jpeg",
-          "png",
-          "gif",
-          "webp",
-          "bmp",
-          "tiff"
-        ],
-        "video": [
-          "mp4",
-          "avi",
-          "mov",
-          "mkv",
-          "webm",
-          "3gp",
-          "flv"
-        ],
-        "audio": [
-          "mp3",
-          "wav",
-          "ogg",
-          "aac",
-          "m4a",
-          "flac",
-          "wma"
-        ],
-        "document": [
-          "pdf",
-          "doc",
-          "docx",
-          "xls",
-          "xlsx",
-          "ppt",
-          "pptx",
-          "txt",
-          "rtf"
-        ]
-      },
-      "limits": {
-        "maxFileSize": "64MB",
-        "maxImageSize": "16MB",
-        "maxVideoSize": "64MB",
-        "maxAudioSize": "16MB",
-        "maxDocumentSize": "100MB"
-      },
-      "processing": {
-        "compression": true,
-        "resizing": true,
-        "conversion": true,
-        "optimization": true,
-        "thumbnails": true,
-        "previews": true,
-        "metadata": true,
-        "watermarks": true,
-        "filters": true,
-        "effects": true
-      }
-    },
-    "groups": {
-      "features": [
-        "create",
-        "delete",
-        "update",
-        "join",
-        "leave",
-        "invite",
-        "remove",
-        "promote",
-        "demote",
-        "mute",
-        "unmute",
-        "archive",
-        "unarchive",
-        "pin",
-        "unpin",
-        "description",
-        "picture",
-        "settings",
-        "permissions",
-        "announcements",
-        "ephemeral",
-        "disappearing"
-      ],
-      "limits": {
-        "maxParticipants": 1024,
-        "maxAdmins": 50,
-        "maxDescriptionLength": 512,
-        "maxNameLength": 25
-      }
-    },
-    "business": {
-      "features": [
-        "catalog",
-        "products",
-        "orders",
-        "payments",
-        "shipping",
-        "invoices",
-        "receipts",
-        "labels",
-        "templates",
-        "broadcasts",
-        "campaigns",
-        "analytics",
-        "insights",
-        "reports",
-        "metrics",
-        "kpis",
-        "dashboards",
-        "alerts",
-        "notifications",
-        "webhooks"
-      ],
-      "integrations": [
-        "shopify",
-        "woocommerce",
-        "magento",
-        "prestashop",
-        "opencart",
-        "bigcommerce",
-        "squarespace",
-        "stripe",
-        "paypal",
-        "square",
-        "razorpay",
-        "payu",
-        "paytm",
-        "phonepe",
-        "googlepay",
-        "applepay",
-        "amazonpay",
-        "samsungpay",
-        "mastercard",
-        "visa",
-        "amex",
-        "discover"
-      ]
-    },
-    "api": {
-      "versions": [
-        "v1",
-        "v2",
-        "v3"
-      ],
-      "protocols": [
-        "REST",
-        "GraphQL",
-        "WebSocket",
-        "gRPC"
-      ],
-      "formats": [
-        "JSON",
-        "XML",
-        "YAML",
-        "CSV",
-        "Protobuf"
-      ],
-      "authentication": [
-        "Bearer",
-        "Basic",
-        "Digest",
-        "OAuth",
-        "JWT",
-        "API-Key"
-      ],
-      "rateLimit": {
-        "requests": 1000,
-        "window": "1h",
-        "burst": 100
-      },
-      "pagination": {
-        "default": 20,
-        "max": 100,
-        "methods": [
-          "offset",
-          "cursor",
-          "page"
-        ]
-      },
-      "filtering": {
-        "operators": [
-          "eq",
-          "ne",
-          "gt",
-          "gte",
-          "lt",
-          "lte",
-          "in",
-          "nin",
-          "like",
-          "regex"
-        ],
-        "fields": [
-          "id",
-          "timestamp",
-          "type",
-          "status",
-          "from",
-          "to",
-          "body"
-        ]
-      },
-      "sorting": {
-        "fields": [
-          "id",
-          "timestamp",
-          "type",
-          "status"
-        ],
-        "orders": [
-          "asc",
-          "desc"
-        ]
-      }
-    },
-    "deployment": {
-      "environments": [
-        "development",
-        "staging",
-        "production"
-      ],
-      "platforms": [
-        "docker",
-        "kubernetes",
-        "aws",
-        "gcp",
-        "azure",
-        "heroku",
-        "vercel",
-        "netlify"
-      ],
-      "databases": [
-        "mongodb",
-        "mysql",
-        "postgresql",
-        "redis",
-        "sqlite",
-        "dynamodb",
-        "firestore"
-      ],
-      "monitoring": [
-        "prometheus",
-        "grafana",
-        "datadog",
-        "newrelic",
-        "sentry",
-        "bugsnag"
-      ],
-      "logging": [
-        "winston",
-        "pino",
-        "bunyan",
-        "log4js",
-        "elasticsearch",
-        "splunk"
-      ],
-      "testing": [
-        "jest",
-        "mocha",
-        "chai",
-        "supertest",
-        "cypress",
-        "playwright",
-        "puppeteer"
-      ],
-      "ci-cd": [
-        "github-actions",
-        "gitlab-ci",
-        "jenkins",
-        "travis",
-        "circleci",
-        "azure-devops"
-      ]
-    }
+    "node": ">=16.0.0"
   }
 }
