--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "pino": "^8.16.1",
     "fs-extra": "^11.1.1",
     "libphonenumber-js": "^1.10.51",
-    "crypto": "^1.0.1"
+    "crypto-js": "^4.2.0",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "eslint": "^8.55.0",
