--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "libphonenumber-js": "^1.10.51",
     "mime-types": "^2.1.35",
     "pino": "^8.16.1",
+    "pino-pretty": "^13.0.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0"
   },
